--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 	<div id="app"></div>
-	<script type="module" src="/src/main.tsx"></script>
+	<script type="module" src="/src/main.jsx"></script>
 </body>
 
 </html>
