--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<script src="https://xotic.org/content/scripts/font-awesome-6-pro.js"></script>
 	<meta name="keywords"
-		content="blooket, blacket, private server, xotic, blacket private server, blooket private server">
+		content="blooket, blacket, private server, xotic, monkxy blacket private server, blooket private server">
 	<meta content="Blacket" property="og:title">
 	<meta content="The first ever open-source Blooket private server written entirely in JavaScript."
 		property="og:description">
