--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<script src="https://xotic.org/content/scripts/font-awesome-6-pro.js"></script>
+	<script defer type="module" src="/src/main.jsx"></script>
 	<meta name="keywords"
 		content="blooket, blacket, private server, xotic, monkxy, blacket private server, blooket private server">
 	<meta content="Blacket" property="og:title">
@@ -15,7 +16,6 @@
 
 <body>
 	<div id="app"></div>
-	<script type="module" src="/src/main.jsx"></script>
 </body>
 
 </html>
