--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<script src="https://xotic.org/content/scripts/font-awesome-6-pro.js"></script>
-	<script defer type="module" src="/src/main.jsx"></script>
+	<script defer type="module" src="/src/index.jsx"></script>
 	<meta name="keywords"
 		content="blooket, blacket, private server, xotic, monkxy, blacket private server, blooket private server">
 	<meta content="Blacket" property="og:title">
