--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <script defer type="module" src="/src/index.jsx"></script>
     <meta name="keywords"
-        content="blooket, blacket, private server, xotic, monkxy, blacket private server, blooket private server">
+        content="blooket, blacket, private server, xotic, monkxy, unblooked, zastix, blacket private server, blooket private server">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
 </head>
 
