--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <script defer type="module" src="/src/index.jsx"></script>
+    <script type="module" src="/src/index.jsx" defer></script>
     <meta name="keywords"
         content="blooket, blacket, private server, xotic, monkxy, unblooked, zastix, blacket private server, blooket private server">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
