load phaser externally for better build times

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.80.1/phaser.min.js"></script>
     <script type="module" src="/src/index.tsx" defer></script>
     <meta name="keywords"
         content="blooket, blacket, private server, xotic, monkxy, unblooked, zastix, blacket private server, blooket private server">
