--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <script type="module" src="/src/index.tsx" defer></script>
     <meta name="keywords"
         content="blooket, blacket, private server, xotic, monkxy, unblooked, zastix, blacket private server, blooket private server">
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
-    <link rel="prefetch" href="https://cdn.blacket.org/static/content/blooks/Console.gif" />
-    <link rel="prefetch" href="https://cdn.blacket.org/static/content/background.png" />
-    <link rel="prefetch" href="https://cdn.blacket.org/static/content/fallingBlooks.png" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=0">
 </head>
 
 <body>
