--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="keywords"
         content="blooket, blacket, private server, xotic, unblooked, zastix, blacket private server, blooket private server">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=0">
+
+    <style id="fa"></style>
 </head>
 
 <body>
