--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="utf-8" />
+    <script async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6493849435526552"
+        crossOrigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.80.1/phaser.min.js"></script>
     <script type="module" src="/src/index.tsx" defer></script>
     <meta name="keywords"
