--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <div
             style="position: fixed; width: 200%; height: 200%; top: 50%; left: 50%; background-size: 550px; background-position: -100px -100px; background-image: url('/media/static/content/background.png'); opacity: 0.075; transform: translate(-50%, -50%) rotate(15deg);">
         </div>
+
+        <div style="position: fixed; width: 100%; height: 100%; top: 0; left: 0; background: linear-gradient(170deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.2) 50%, rgba(0, 0, 0, 0) 100%); z-index: -1;"></div>
     </div>
 
     <div id="app"></div>
