fix preloading gif, update inventory sell modal
Co-authored-by: Piotr <PiootrA@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background-color: #2f2f2f;">
 
         <div
-            style="position: fixed; width: 100%; height: 100%; top: 50%; left: 50%; transform: translate(-50%, -50%); background-image: url('preloading.gif'); background-size: 80%; background-position: center; background-repeat: no-repeat; max-width: 600px; filter: drop-shadow(0 0 20px #000)">
+            style="position: fixed; width: 100%; height: 100%; top: 50%; left: 50%; transform: translate(-50%, -50%); background-image: url('/preloading.gif'); background-size: 80%; background-position: center; background-repeat: no-repeat; max-width: 600px; filter: drop-shadow(0 0 20px #000)">
         </div>
 
         <div
